--- a/.gitignore
+++ b/.gitignore
@@ -15,15 +15,9 @@ bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-
-### VS Code ###
-.vscode/
+build
+.gradle
+out
 
 ### Mac OS ###
 .DS_Store
