--- a/build.gradle
+++ b/build.gradle
@@ -7,5 +7,6 @@ repositories {
 
 dependencies {
     implementation 'org.postgresql:postgresql:42.7.2'
+    implementation 'com.zaxxer:HikariCP:5.1.0'
     testCompile 'junit:junit:4.12'
 }
